[package]
name = "shj-map-desktop"
version = "0.7.0"
description = "山海经原典地图研究台桌面版"
authors = ["Lumen Auralis"]
edition = "2021"

[lib]
name = "shj_map_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
log = "0.4"

tokio = { version = "1", features = ["time"] }
url = "2"
